# thagomizer

./: .coverage  .gitignore  README.md  mkdocs.yaml  pyproject.toml
.cursor/rules/: python.mdc
.github/: docs.yml
.github/workflows/: docs.yml  main.yml  pypi.yml
docs/ref/: video.md
src/thagomizer/: __init__.py  _version.py  utils.py  video.py
tests/: test_utils.py  test_video.py  test_video_subtitles.py
