[project]
name = "thagomizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Srinivas Gorur-Shandilya", email = "code@srinivas.gs" }
]
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.19.0",
    "xxhash>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter-black>=0.4.0",
    "pytest>=8.3.4",
]
