[project]
name = "thagomizer"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Srinivas Gorur-Shandilya", email = "code@srinivas.gs" }
]
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.19.0",
    "xxhash>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter-black>=0.4.0",
    "pytest>=8.3.4",
]


[tool.coverage.run]
omit = [
    "tests/*.py",
]


[tool.interrogate]
fail-under = 100
exclude = ["setup.py", "docs", "build","tests","variables","conftest.py"]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = false
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
color = true

[tool.ruff]
include = [
    "**/src/**/*.py",
    "**/tests/**/*.py",
]

[tool.ruff.lint]
ignore = ["E203", "E266", "E501"]

[tool.ruff.lint.isort]
case-sensitive = true