[project]
name = "thagomizer"
description = "A collection of useful tools in python."
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Srinivas Gorur-Shandilya", email = "code@srinivas.gs" }
]
requires-python = ">=3.10"
dependencies = [
    "beartype>=0.19.0",
    "xxhash>=3.5.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/thagomizer/_version.py"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter-black>=0.4.0",
    "pytest>=8.3.4",
]
docs = [
    "black>=25.1.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=8.2.0",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocstrings>=0.28.0",
    "mkdocstrings-python>=1.14.4",
]




[tool.coverage.run]
omit = [
    "tests/*.py",
]


[tool.interrogate]
fail-under = 100
exclude = ["setup.py", "docs", "build","tests","variables","conftest.py"]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = false
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
color = true

[tool.ruff]
include = [
    "**/src/**/*.py",
    "**/tests/**/*.py",
]

[tool.ruff.lint]
ignore = ["E203", "E266", "E501"]

[tool.ruff.lint.isort]
case-sensitive = true
